@@ -15,21 +15,15 @@
     <div class="container-fluid" id="howto">
       <p>
         ${_(strings.HOWTO_TBB[1]) % \
-           ("""<a href="https://www.torproject.org/projects/torbrowser.html"
+           ("""<a href="https://www.torproject.org/download/"
+                  target="_blank">""",
+            """</a>""",
+            """<a href="https://tb-manual.torproject.org/bridges/#entering-bridge-addresses"
+                  target="_blank">""",
+            """</a>""",
+            """<a href="https://tb-manual.torproject.org/mobile-tor/#circumvention"
                   target="_blank">""",
             """</a>""")}
-        ${_(strings.HOWTO_TBB[2])}
-      </p>
-      <br />
-      <div class="bs-component">
-        <blockquote>
-          <p>
-            ${_(strings.HOWTO_TBB[3])}
-          </p>
-        </blockquote>
-      </div>
-      <p>
-        ${_(strings.HOWTO_TBB[4])}
       </p>
     </div>
   </div>
