@@ -1,3 +1,8 @@
+        * FIXES https://bugs.torproject.org/30317
+        Update our "howto" box, which explains how one adds bridges to Tor
+        Browser.  In addition to updating the instructions, this patch also
+        links to instructions for Android.
+
         * FIXES https://bugs.torproject.org/31967
         Use a CSPRNG for selecting cached CAPTCHAs.
 
